--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,9 @@ mark {
   color: #21243d;
   font-size: 14px;
   line-height: 18px;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+  border-radius: 0.25em;
+  padding: 1em;
 }
 
 .hit h1 {
